Fix border radius for table on mobile

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -393,6 +393,9 @@ button {
   .main-panel {
     margin: 0;
   }
+  .page-content {
+    border-radius: 0;
+  }
   .home-page {
     .page-content {
       padding: $spacing;
